package fisica.mundo;

@FunctionalInterface
public interface Actualizable {
    void actualizar(double dt);
}
