package fisica.mundo;

import fisica.main.Vec2D;

public interface AplicarFuerza {
    void aplicarFuerza(Vec2D f);    
}
